fix: fix color scheme in dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,14 +8,6 @@
   --background-end-rgb: 0, 0, 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 255, 255, 255;
-    --background-end-rgb: 255, 255, 255;
-  }
-}
-
 html, body {
   width: 100%;
   overflow-x: hidden;
